add the favourite functionality

--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -33,10 +33,8 @@
                 Details
               </a>
 
-              <!-- Book Button -->
-              <button class="flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded-lg shadow hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-400 transition duration-300">
-                Book
-              </button>
+              <!-- favourite Button -->
+              <%-include('../partials/favourite',{home:home})%>
             </div>
           </div>
         </div>
