--- a/views/store/home-detail.ejs
+++ b/views/store/home-detail.ejs
@@ -3,13 +3,30 @@
 
 <body>
   <%- include('../partials/nav') %>
-  <main class="container mx-auto bg-white shadow-lg rounded-lg p-8 mt-10 max-w-6xl">
+
+  <main class="container mx-auto p-8 mt-10 max-w-4xl bg-white shadow-lg rounded-lg">
     <h2 class="text-3xl text-red-500 font-bold text-center mb-6">
-      You are in the  home detail page:
+      Home Details
     </h2>
-    
+
+    <div class="overflow-hidden flex">
+      <div class="flex flex-col items-center">
+        <img src="<%= home.photoUrl %>" alt="<%= home.houseName %>" class="max-w-md h-56 object-cover rounded" onerror="this.src=''; document.getElementById('imgErrorText').classList.remove('hidden');">
+
+      </div>
+
+      <div class="p-6">
+        <p class="text-gray-600 mb-2"><strong>Location:</strong> <%= home.location %></p>
+        <p class="text-gray-600 mb-2"><strong>House Name:</strong> <%= home.houseName %></p>
+        <p class="text-gray-600 mb-2"><strong>Rating:</strong> ⭐ <%= home.rating %></p>
+        <p class="text-lg font-bold text-red-500 mb-4"><strong>Price:</strong> Rs <%= home.price %> / night</p>
+        <p class="mb-4"><strong>Description:</strong> <%= home.description %></p>
+
+        <%-include('../partials/favourite')%>
+
+      </div>
+    </div>
   </main>
 </body>
 
 </html>
-  
