setup the edit button functionality

--- a/views/host/host-home-list.ejs
+++ b/views/host/host-home-list.ejs
@@ -29,12 +29,12 @@
 
           <div class="flex space-x-4 mt-4">
             <!-- Edit Button -->
-            <button class="flex items-center gap-2 bg-red-400 text-white px-4 py-2 rounded-lg shadow hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-300 transition duration-300">
+            <a href="/host/edit-home/<%=home.id%>?editing=true"  class="flex items-center gap-2 bg-red-400 text-white px-4 py-2 rounded-lg shadow hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-300 transition duration-300">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5M18.5 2.5a2.121 2.121 0 013 3L12 15l-4 1 1-4 9.5-9.5z" />
               </svg>
               Edit
-            </button>
+            </a>
 
             <!-- Delete Button -->
             <button class="flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded-lg shadow hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-400 transition duration-300">
