--- a/views/store/favourite-list.ejs
+++ b/views/store/favourite-list.ejs
@@ -25,9 +25,11 @@
               <span class="text-gray-700"><%= home.rating %></span>
             </div>
           </div>
-         <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-black">
-  Book
-</button>
+
+          <form action="/favourites/delete/<%=home.id%>" method="POST">         <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-black">
+  Unfavourite
+</button></form>
+
 
 
 
