--- a/views/host/edit-home.ejs
+++ b/views/host/edit-home.ejs
@@ -10,7 +10,7 @@
     </h1>
 
     <form action="/host/<%=editing?'edit-home' : 'add-home'%>" method="POST" class="max-w-md mx-auto">
-      
+
       <input type="hidden" name="id" value="<%=editing?home.id :''%>" />
 
       <input type="text" name="houseName" value="<%=editing?home.houseName:''%>" placeholder="Enter your House Name" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" />
@@ -22,6 +22,10 @@
       <input type="text" name="rating" value="<%=editing?home.rating:''%>" placeholder="Rating" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" />
 
       <input type="text" name="photoUrl" value="<%=editing?home.photoUrl:''%>" placeholder="Enter Photo URL" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" />
+
+      <textarea name="description" placeholder="Enter your home detail" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"><%= editing ? home.description : '' %></textarea>
+
+
 
       <input type="submit" value="<%=editing ? 'Update Home' :'Add Home'%>" onclick="this.disabled = true; this.form.submit();" class="w-full bg-red-500 text-white py-2 rounded-md hover:bg-red-600 transition duration-300" />
     </form>
