the sql code replace with the mongodb

--- a/views/host/host-home-list.ejs
+++ b/views/host/host-home-list.ejs
@@ -29,7 +29,7 @@
 
           <div class="flex space-x-4 mt-4">
             <!-- Edit Button -->
-            <a href="/host/edit-home/<%=home.id%>?editing=true"  class="flex items-center gap-2 bg-red-400 text-white px-4 py-2 rounded-lg shadow hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-300 transition duration-300">
+            <a href="/host/edit-home/<%=home._id%>?editing=true"  class="flex items-center gap-2 bg-red-400 text-white px-4 py-2 rounded-lg shadow hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-300 transition duration-300">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5M18.5 2.5a2.121 2.121 0 013 3L12 15l-4 1 1-4 9.5-9.5z" />
               </svg>
@@ -38,7 +38,7 @@
 
             <!-- Delete Button -->
 
-            <form action="/host/delete-home/<%=home.id%>" method="POST">
+            <form action="/host/delete-home/<%=home._id%>" method="POST">
               <button type="submit" class="flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded-lg shadow hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-400 transition duration-300">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
