--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -29,7 +29,7 @@
             <!-- Buttons Block -->
             <div class="flex space-x-4 mt-4">
               <!-- Details Button -->
-              <a href="/homes/<%= home.id %>" class="flex items-center gap-2 bg-red-400 text-white px-4 py-2 rounded-lg shadow hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-300 transition duration-300">
+              <a href="/homes/<%= home._id %>" class="flex items-center gap-2 bg-red-400 text-white px-4 py-2 rounded-lg shadow hover:bg-red-500 focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-red-300 transition duration-300">
                 Details
               </a>
 
