--- a/views/partials/favourite.ejs
+++ b/views/partials/favourite.ejs
@@ -5,5 +5,5 @@
   >
     Add to Favorite
   </button>
-  <input type="hidden" name="id" value="<%=home.id%>" />
+  <input type="hidden" name="id" value="<%=home._id%>" />
 </form>
