--- a/views/store/favourite-list.ejs
+++ b/views/store/favourite-list.ejs
@@ -26,7 +26,7 @@
             </div>
           </div>
 
-          <form action="/favourites/delete/<%=home.id%>" method="POST">         <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-black">
+          <form action="/favourites/delete/<%=home._id%>" method="POST">         <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-black">
   Unfavourite
 </button></form>
 
