--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,6 @@
 <header class="bg-red-500 text-white p-4 shadow-md">
   <nav class="container mx-auto flex justify-between items-center">
+    <!-- LEFT SIDE LINKS -->
     <ul class="flex space-x-4">
       <li>
         <a
@@ -10,7 +11,6 @@
       </li>
 
       <% if (isLoggedIn) { %>
-
       <li>
         <a
           href="/homes"
@@ -18,7 +18,6 @@
           >Home-List</a
         >
       </li>
-
       <li>
         <a
           href="/favourites"
@@ -26,7 +25,6 @@
           >Favourites</a
         >
       </li>
-
       <li>
         <a
           href="/bookings"
@@ -48,18 +46,25 @@
           >Add Home</a
         >
       </li>
-
       <% } %>
     </ul>
+
+    <!-- RIGHT SIDE LINKS -->
     <% if (!isLoggedIn) { %>
-    <ul>
+    <ul class="flex space-x-4">
       <li>
         <a
           href="/auth/login"
           class="<%= currentPage === 'login' ? 'bg-red-400' : 'hover:bg-red-400' %> py-2 px-4 rounded transition duration-300"
+          >Login</a
         >
-          Login
-        </a>
+      </li>
+      <li>
+        <a
+          href="/auth/signup"
+          class="<%= currentPage === 'signup' ? 'bg-red-400' : 'hover:bg-red-400' %> py-2 px-4 rounded transition duration-300"
+          >Signup</a
+        >
       </li>
     </ul>
     <% } else { %>
