--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,7 +11,11 @@
 
     <form action="/auth/login" method="POST" class="max-w-md mx-auto">
 
-      <input type="text" name="username" placeholder="Email/Username" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" required   autocomplete="off" />
+      <%- include('../partials/errors') %>
+
+      <input type="email" name="email" placeholder="Enter your email"
+      value="<%=oldInput.email ? oldInput.email :''%>"
+      class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" required   autocomplete="off" />
 
       <input type="password" name="password" placeholder="Enter Your Password" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" required autocomplete="new-password" />
 
