--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -24,7 +24,7 @@
         </a>
       </li>
 
-      <% if (isLoggedIn) { %>
+      <% if (isLoggedIn) { %> <% if(user && user.userType==="guest") { %>
       <li>
         <a
           href="/homes"
@@ -49,6 +49,7 @@
           Bookings
         </a>
       </li>
+      <% } else { %>
       <li>
         <a
           href="/host/host-home-list"
@@ -56,7 +57,7 @@
         >
           Host Homes
         </a>
-      </li>
+      </li>             
       <li>
         <a
           href="/host/add-home"
@@ -65,7 +66,8 @@
           Add Home
         </a>
       </li>
-      <% } %>
+
+      <%}%> <% } %>
     </ul>
 
     <!-- RIGHT SIDE LINKS -->
