refactor: update photoUrl to photo in home model and views

--- a/views/store/home-detail.ejs
+++ b/views/store/home-detail.ejs
@@ -11,7 +11,7 @@
 
     <div class="overflow-hidden flex">
       <div class="flex flex-col items-center">
-        <img src="<%= home.photoUrl %>" alt="<%= home.houseName %>" class="max-w-md h-56 object-cover rounded" onerror="this.src=''; document.getElementById('imgErrorText').classList.remove('hidden');">
+        <img src="<%= home.photo %>" alt="<%= home.houseName %>" class="max-w-md h-56 object-cover rounded" onerror="this.src=''; document.getElementById('imgErrorText').classList.remove('hidden');">
 
       </div>
 
