--- a/views/host/edit-home.ejs
+++ b/views/host/edit-home.ejs
@@ -21,7 +21,9 @@
 
       <input type="text" name="rating" value="<%=editing?home.rating:''%>" placeholder="Rating" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" />
 
-      <input type="text" name="photoUrl" value="<%=editing?home.photoUrl:''%>" placeholder="Enter Photo URL" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" />
+      <input type="file" name="photo"
+      accept="image/jpg , image/jpeg , image/png" 
+      class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500" />
 
       <textarea name="description" placeholder="Enter your home detail" class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"><%= editing ? home.description : '' %></textarea>
 
