--- a/views/store/index.ejs
+++ b/views/store/index.ejs
@@ -25,12 +25,12 @@
               <span class="text-gray-700"><%= home.rating %></span>
             </div>
           </div>
-         <button class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-black">
-  Book
-</button>
-
-
-
+         <form action="/book/<%= home._id %>" method="GET">
+           <button
+             class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-black">
+               Book
+            </button>
+          </form>
 
         </div>
       </div>
